...
                android:layout_marginTop="40dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.cardview.widget.CardView
                    android:id="@+id/paytm1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:cardCornerRadius="4dp"
...
